--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@line/liff": "^2.20.1",
+    "angular-code-input": "^1.6.0",
     "ngx-webcam": "^0.4.1",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
@@ -29,6 +30,7 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/long": "^4.0.2",
     "autoprefixer": "^10.4.7",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
